{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 24,
  "lineage": "2b5d06ea-e1c1-f930-e6df-7bc27827e7bf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-065efef2c739d613b",
            "arn": "arn:aws:ec2:us-east-1:325803294162:instance/i-0a782af5e05a36796",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nginx_profile",
            "id": "i-0a782af5e05a36796",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cb995a1d07a4d790",
            "private_dns": "ip-10-0-0-26.ec2.internal",
            "private_ip": "10.0.0.26",
            "public_dns": "ec2-54-160-186-70.compute-1.amazonaws.com",
            "public_ip": "54.160.186.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04479b9164da56855",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ff9d6fcc56235cd1",
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0993fbcafe3544692"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_iam_role.allow_nginx_s3",
            "aws_iam_role_policy.allow_s3_all",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-065efef2c739d613b",
            "arn": "arn:aws:ec2:us-east-1:325803294162:instance/i-083b91b0483236efd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-083b91b0483236efd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a7aa95bc1d513866",
            "private_dns": "ip-10-0-1-151.ec2.internal",
            "private_ip": "10.0.1.151",
            "public_dns": "ec2-54-242-24-230.compute-1.amazonaws.com",
            "public_ip": "54.242.24.230",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0719006a0d993f48e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02c140c0607d7e658",
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0993fbcafe3544692"
            ]
          },
          "dependencies": [
            "aws_s3_bucket.web_bucket",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:325803294162:internet-gateway/igw-080d16053b63cc598",
            "id": "igw-080d16053b63cc598",
            "owner_id": "325803294162",
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "vpc_id": "vpc-0f85f1ae82724e439"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "globo-web-app-15634",
                "enabled": true,
                "prefix": "alb-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:325803294162:loadbalancer/app/globo-web-alb/4693f17d53f5492f",
            "arn_suffix": "app/globo-web-alb/4693f17d53f5492f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "globo-web-alb-1871362832.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:325803294162:loadbalancer/app/globo-web-alb/4693f17d53f5492f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "globo-web-alb",
            "security_groups": [
              "sg-03e8042be82bb431c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02c140c0607d7e658"
              },
              {
                "subnet_id": "subnet-0ff9d6fcc56235cd1"
              }
            ],
            "subnets": [
              "subnet-02c140c0607d7e658",
              "subnet-0ff9d6fcc56235cd1"
            ],
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "vpc_id": "vpc-0f85f1ae82724e439",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_s3_bucket.web_bucket",
            "aws_security_group.alb_sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:325803294162:listener/app/globo-web-alb/4693f17d53f5492f/3058c473d5a0ca90",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:325803294162:targetgroup/nginx-alb-tg/cb2ab0827dae995a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:325803294162:listener/app/globo-web-alb/4693f17d53f5492f/3058c473d5a0ca90",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:325803294162:loadbalancer/app/globo-web-alb/4693f17d53f5492f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nginx",
            "aws_lb_target_group.nginx",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.alb_sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:325803294162:targetgroup/nginx-alb-tg/cb2ab0827dae995a",
            "arn_suffix": "targetgroup/nginx-alb-tg/cb2ab0827dae995a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:325803294162:targetgroup/nginx-alb-tg/cb2ab0827dae995a",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nginx-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0f85f1ae82724e439"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:325803294162:targetgroup/nginx-alb-tg/cb2ab0827dae995a-20220710134504144800000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:325803294162:targetgroup/nginx-alb-tg/cb2ab0827dae995a",
            "target_id": "i-0a782af5e05a36796"
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_iam_role.allow_nginx_s3",
            "aws_iam_role_policy.allow_s3_all",
            "aws_instance.nginx1",
            "aws_lb_target_group.nginx",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:325803294162:targetgroup/nginx-alb-tg/cb2ab0827dae995a-20220710134452565800000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:325803294162:targetgroup/nginx-alb-tg/cb2ab0827dae995a",
            "target_id": "i-083b91b0483236efd"
          },
          "dependencies": [
            "aws_instance.nginx2",
            "aws_lb_target_group.nginx",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:325803294162:route-table/rtb-0253fe55c89915835",
            "id": "rtb-0253fe55c89915835",
            "owner_id": "325803294162",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-080d16053b63cc598",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f85f1ae82724e439"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0149720a10286093a",
            "route_table_id": "rtb-0253fe55c89915835",
            "subnet_id": "subnet-0ff9d6fcc56235cd1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093a888304694caa7",
            "route_table_id": "rtb-0253fe55c89915835",
            "subnet_id": "subnet-02c140c0607d7e658"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:325803294162:security-group/sg-03e8042be82bb431c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e8042be82bb431c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_alb_sg",
            "name_prefix": "",
            "owner_id": "325803294162",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f85f1ae82724e439"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:325803294162:security-group/sg-0993fbcafe3544692",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0993fbcafe3544692",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_sg",
            "name_prefix": "",
            "owner_id": "325803294162",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f85f1ae82724e439"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:325803294162:subnet/subnet-0ff9d6fcc56235cd1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff9d6fcc56235cd1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "325803294162",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "vpc_id": "vpc-0f85f1ae82724e439"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:325803294162:subnet/subnet-02c140c0607d7e658",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c140c0607d7e658",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "325803294162",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "vpc_id": "vpc-0f85f1ae82724e439"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:325803294162:vpc/vpc-0f85f1ae82724e439",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-044ba38c57d4f4955",
            "default_route_table_id": "rtb-08777ca32fa2bc6f7",
            "default_security_group_id": "sg-02d835f663bcc119c",
            "dhcp_options_id": "dopt-363a8a4d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f85f1ae82724e439",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08777ca32fa2bc6f7",
            "owner_id": "325803294162",
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-globo-web-app"
            }
          }
        }
      ]
    }
  ]
}